--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ npm:
 
 script:
   - npm install
-  - npm test
+  - npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
-after success: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+# after success: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
