--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script:
   - npm install
   - npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
-# after success: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+# gafter success: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
