--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/shannongamby/tictactoe#readme",
   "dependencies": {
     "istanbul": "^0.4.5",
-    "jasmine": "^3.3.1"
+    "jasmine": "^3.3.1",
+    "jasmine-node": "^1.16.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.2"
