--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ npm:
 
 script:
   - npm install
-  - npm test
-
-after success: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
