--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "istanbul cover jasmine-node spec/"
+    "test": "jasmine-node spec/",
+    "coverage": "istanbul cover jasmine-node spec/",
+    "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
