adding coverage check to travis

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jasmine-node spec/",
     "coverage": "istanbul cover jasmine-node spec/",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls"
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "check-coverage": "istanbul check-coverage --statements 90 --branches 90 --functions 90 --lines 90"
   },
   "repository": {
     "type": "git",
