--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ npm:
 script:
   - npm install
   - npm test
-  - npm check-coverage
+  - npm run check-coverage
 
 after_success:
   - npm run coverage
